--- a/k8s/jhu/mysql/generated.yaml
+++ b/k8s/jhu/mysql/generated.yaml
@@ -95,13 +95,10 @@ metadata:
     app.kubernetes.io/name: mysql
     helm.sh/chart: mysql-9.12.1
     app.kubernetes.io/component: primary
-  annotations:
-    metallb.universe.tf/allow-shared-ip: homelab-192.168.0.181
 spec:
-  type: LoadBalancer
+  type: NodePort
   sessionAffinity: None
   externalTrafficPolicy: "Cluster"
-  loadBalancerIP: 192.168.0.181
   ports:
     - name: mysql
       port: 3306
