--- a/k8s/jhu/mysql/helm/values.yaml
+++ b/k8s/jhu/mysql/helm/values.yaml
@@ -18,7 +18,4 @@ primary:
   service:
     nodePorts:
       mysql: "31201"
-    annotations:
-      metallb.universe.tf/allow-shared-ip: "homelab-192.168.0.181"
-    loadBalancerIP: 192.168.0.181
-    type: LoadBalancer
+    type: NodePort
