--- a/k8s/ingress-nginx/ingress-nginx/kustomization.yaml
+++ b/k8s/ingress-nginx/ingress-nginx/kustomization.yaml
@@ -17,11 +17,11 @@ patches:
     - op: add
       path: /spec/loadBalancerIP
       value: 192.168.0.181
-# - target:
-#     group: apps
-#     kind: Deployment
-#     name: ingress-nginx-controller
-#   patch: |-
-#     - op: add
-#       path: /spec/template/spec/containers/0/args/-
-#       value: --default-ssl-certificate=$(POD_NAMESPACE)/wildcard-zeb17-internal
+- target:
+    group: apps
+    kind: Deployment
+    name: ingress-nginx-controller
+  patch: |-
+    - op: add
+      path: /spec/template/spec/containers/0/args/-
+      value: --default-ssl-certificate=$(POD_NAMESPACE)/wildcard-zeb17-internal
