--- a/k8s/argocd/argocd/generated.yaml
+++ b/k8s/argocd/argocd/generated.yaml
@@ -130,7 +130,7 @@ type: Opaque
 # Setting a blank data again will wipe admin password/key/cert
 data:
   admin.password: JDJhJDEwJHhJdHgxYmlKdTVRcWwuQU5mLzNDanUvbXhZRTA0V1VHNWUzSS9Nb1JweGJWU2RvRGdMTi9X
-  admin.passwordMtime: MjAyMy0xMi0wMlQyMTo1MToyMFo=
+  admin.passwordMtime: MjAyMy0xMi0wM1QwNTozMToxMVo=
 ---
 # Source: argo-cd/templates/argocd-configs/repository-secret.yaml
 apiVersion: v1
@@ -20139,7 +20139,6 @@ spec:
         - /usr/local/bin/argocd-server
         - --port=8080
         - --metrics-port=8083
-        - --insecure
         env:
           - name: ARGOCD_SERVER_INSECURE
             valueFrom:
@@ -20916,8 +20915,7 @@ metadata:
     app.kubernetes.io/part-of: argocd
     app.kubernetes.io/version: "v2.8.3"
   annotations:
-    cert-manager.io/cluster-issuer: "selfsigned-issuer"
-    cert-manager.io/common-name: "argocd.zeb17-int.duckdns.org"
+    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
 spec:
   ingressClassName: nginx
   rules:
