--- a/k8s/argocd/argocd/helm/values.yaml
+++ b/k8s/argocd/argocd/helm/values.yaml
@@ -30,13 +30,12 @@ configs:
     argocdServerAdminPassword: $2a$10$xItx1biJu5Qql.ANf/3Cju/mxYE04WUG5e3I/MoRpxbVSdoDgLN/W
 
 server:
-  extraArgs:
-    - "--insecure"
+  # extraArgs:
+  #   - "--insecure"
   ingress:
     enabled: true
     annotations:
-      cert-manager.io/cluster-issuer: selfsigned-issuer
-      cert-manager.io/common-name: argocd.zeb17-int.duckdns.org
+      nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
     ingressClassName: nginx
     hosts:
     - argocd.zeb17-int.duckdns.org
