--- a/k8s/argocd/argocd/helm/values.yaml
+++ b/k8s/argocd/argocd/helm/values.yaml
@@ -34,8 +34,8 @@ server:
     - "--insecure"
   ingress:
     enabled: true
-    annotations:
-      nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
+    # annotations:
+    #   nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
     ingressClassName: nginx
     hosts:
     - argocd.zeb17-int.duckdns.org
